# scoreseer

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  fly.toml  pyproject.toml  render.yaml
.github/workflows/: keepalive.yml
backend/: alembic.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2a83f4806b77_add_prediction_is_backfill.py  5492126dbd51_add_grade_points.py  5fefeeae33e9_initial_schema.py  (+1 more)
backend/app/: __init__.py  auth.py  cli.py  db.py  main.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_auth.py  test_batch_parse.py  test_calibration.py  test_dashboard.py  test_estimators_extra.py  test_fixture_parsing.py  test_fixture_sync.py  test_grading_service.py  test_health.py  test_metrics.py  test_poisson.py  test_prediction_schema.py  test_prediction_service.py  test_run_service.py  test_scoring.py
docs/: architecture.md  business-logic.html  dev-plan.md  prd.md  ui-spec.md  ux-flows.md
frontend/: .gitignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: fixture-card.tsx  forecast-board.tsx  grade-badges.tsx  header-strip.tsx  history-filter.tsx  metric-tile.tsx  predict-match-button.tsx  prediction-ui.tsx  run-controls.tsx  sidebar.tsx  stage-points.tsx  status-chip.tsx  team-flag.tsx  theme-toggle.tsx  win-prob-bar.tsx
frontend/lib/: api.ts  backend.ts  cn.ts  estimators.ts  format.ts  run-eta.ts  winprob.ts
(+77 files in other folders)
